0.12.0
------

* NullCalculationError is now a warning instead of an error. (#311)
* TableSet is now a subclass of MappedSequence.
* Rows and Columns are now subclasses of MappedSequence.
* Column.get_data_without_nulls() renamed Column.values_without_nulls().
* Column.get_data_sorted() renamed Column.values_sorted().
* Column.get_data() renamed Column.values().
* Columns can now be sliced.
* Columns can now be indexed by row name. (#301)
* Added support for Python 3.5.
* Row objects can now be sliced. (#303)
* Replaced RowSequence and ColumnSequence with MappedSequence.
* Replace RowDoesNotExistError with KeyError.
* Replaced ColumnDoesNotExistError with IndexError.
* Removed unnecessary custom RowIterator, ColumnIterator and CellIterator.
* Performance improvements for Table "forks". (where, limit, etc)
* TableSet keys are now converted to row names during aggregation. (#291)
* Simplified implementation of Row for speed and consistency. No API changes.
* Removed fancy __repr__ implementations. Use __str__ instead. (#290)
* Rows can now be accessed by name as well as index. (#282)
* Added row_names argument to Table constructor. (#282)
* Removed Row.table and Row.index properties. (#287)
* Columns can now be accessed by index as well as name. (#281)
* Added column name and type validation to Table constructor. (#285)
* Table now supports variable-length rows during construction. (#39)
* aggregations.Summary implemented for generic aggregations. (#181)
* Fix TableSet.key_type being lost after proxying Table methods. (#278)
* Massive performance increases for joins. (#277)
* Added join benchmark. (#73)

0.11.0
------

* Implemented __repr__ for Table, TableSet, Column and Row. (#261)
* Row.index property added.
* Column constructor no longer takes a data_type argument.
* Column.index and Column.name properties added.
* Table.counts implemented. (#271)
* Table.bins implemented. (#267, #227)
* Table.join now raises ColumnDoesNotExistError. (#264)